WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
259613
[GTK] Color chooser opens in a dialog outside the window
https://bugs.webkit.org/show_bug.cgi?id=259613
Summary
[GTK] Color chooser opens in a dialog outside the window
two
Reported
2023-07-28 14:39:46 PDT
this is not reproducible in MiniBrowser because MiniBrowser overrides the color chooser, but it happens in Epiphany and any WebView with `<input type="color">`
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-07-28 14:51:13 PDT
Oh wow, that's bad. Test page:
https://www.w3schools.com/tags/tryit.asp?filename=tryhtml5_input_type_color
Michael Catanzaro
Comment 2
2025-05-09 07:19:24 PDT
> color chooser opens in a dialog outside the window
It does use the parent window so it gets positioned correctly, but it's not modal, which is not what users expect. This cannot be changed using GtkColorChooserDialog because it doesn't expose GtkDialogFlags. GtkColorChooserDialog is deprecated (because GtkDialog is itself deprecated). The solution will be to switch to GtkColorDialog.
> and closes when moving the mouse pointer
I don't see this. Must have been fixed at some point.
Michael Catanzaro
Comment 3
2025-05-09 09:56:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45170
two
Comment 4
2025-05-09 12:50:45 PDT
*i later found that it actually closes when receving hold event (that tells that a finger is on the touchpad), not the pointer moving event it's just that when i moved the pointer, i, well, touched the touchpad to do it
https://wayland.app/protocols/pointer-gestures-unstable-v1#zwp_pointer_gesture_hold_v1:event:begin
so it's not reproducible if you're using a mouse or x11
Michael Catanzaro
Comment 5
2025-06-24 08:34:12 PDT
I wound up abandoning my pull request because it would break the ability to select a color from the web content.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug